// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Final form FieldGroup component Should render correctly 1`] = `
<Group>
  <ReactFinalForm
    onSubmit={[Function]}
    render={[Function]}
  >
    <FieldGroup
      groupSize={8}
      label="Field group"
      labelSize={2}
      name="some group"
      validateOnMount={false}
    >
      <Col
        bsClass="col"
        className="field-group"
        componentClass="div"
        xs={12}
      >
        <div
          className="field-group col-xs-12"
        >
          <Col
            bsClass="col"
            className="control-label"
            componentClass="label"
            xs={2}
          >
            <label
              className="control-label col-xs-2"
            >
              Field group
            </label>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={8}
          >
            <div
              className="col-xs-8"
            >
              <Field
                format={[Function]}
                id="selectOne1"
                name="radioGroup"
                parse={[Function]}
                render={[Function]}
                type="radio"
                validate={[Function]}
                value="First radio"
              >
                <FinalFormRadio
                  id="selectOne1"
                  input={
                    Object {
                      "checked": false,
                      "name": "radioGroup",
                      "onBlur": [Function],
                      "onChange": [Function],
                      "onFocus": [Function],
                      "value": "First radio",
                    }
                  }
                  label="Radio button 1"
                  meta={
                    Object {
                      "active": false,
                      "data": Object {},
                      "dirty": false,
                      "dirtySinceLastSubmit": false,
                      "error": "Please select one option",
                      "initial": undefined,
                      "invalid": true,
                      "pristine": true,
                      "submitError": undefined,
                      "submitFailed": false,
                      "submitSucceeded": false,
                      "submitting": false,
                      "touched": false,
                      "valid": false,
                      "visited": false,
                    }
                  }
                  type="radio"
                >
                  <FinalFormComponent
                    clearable={false}
                    componentType="radio"
                    disabled={false}
                    id="selectOne1"
                    input={
                      Object {
                        "checked": false,
                        "name": "radioGroup",
                        "onBlur": [Function],
                        "onChange": [Function],
                        "onFocus": [Function],
                        "value": "First radio",
                      }
                    }
                    inputColumnSize={8}
                    label="Radio button 1"
                    labelColumnSize={2}
                    labelKey="label"
                    meta={
                      Object {
                        "active": false,
                        "data": Object {},
                        "dirty": false,
                        "dirtySinceLastSubmit": false,
                        "error": "Please select one option",
                        "initial": undefined,
                        "invalid": true,
                        "pristine": true,
                        "submitError": undefined,
                        "submitFailed": false,
                        "submitSucceeded": false,
                        "submitting": false,
                        "touched": false,
                        "valid": false,
                        "visited": false,
                      }
                    }
                    multi={false}
                    placeholder=""
                    searchable={false}
                    simpleValue={true}
                    type="radio"
                    validateOnMount={false}
                    valueKey="value"
                  >
                    <FormGroup
                      bsClass="form-group"
                      className="field-group"
                      validationState={null}
                    >
                      <div
                        className="field-group form-group"
                      >
                        <Col
                          bsClass="col"
                          componentClass="div"
                        >
                          <div
                            className=""
                          >
                            <Radio
                              bsClass="radio"
                              checked={false}
                              disabled={false}
                              id="selectOne1"
                              inline={false}
                              name="radioGroup"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              title=""
                              value="First radio"
                            >
                              <div
                                className="radio"
                              >
                                <label
                                  title=""
                                >
                                  <input
                                    checked={false}
                                    disabled={false}
                                    id="selectOne1"
                                    name="radioGroup"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    type="radio"
                                    value="First radio"
                                  />
                                  Radio button 1
                                </label>
                              </div>
                            </Radio>
                          </div>
                        </Col>
                      </div>
                    </FormGroup>
                  </FinalFormComponent>
                </FinalFormRadio>
              </Field>
              <Field
                format={[Function]}
                id="selectOne2"
                name="radioGroup"
                parse={[Function]}
                render={[Function]}
                type="radio"
                validate={[Function]}
                value="Second radio"
              >
                <FinalFormRadio
                  id="selectOne2"
                  input={
                    Object {
                      "checked": false,
                      "name": "radioGroup",
                      "onBlur": [Function],
                      "onChange": [Function],
                      "onFocus": [Function],
                      "value": "Second radio",
                    }
                  }
                  label="Radio button 2"
                  meta={
                    Object {
                      "active": false,
                      "data": Object {},
                      "dirty": false,
                      "dirtySinceLastSubmit": false,
                      "error": "Please select one option",
                      "initial": undefined,
                      "invalid": true,
                      "pristine": true,
                      "submitError": undefined,
                      "submitFailed": false,
                      "submitSucceeded": false,
                      "submitting": false,
                      "touched": false,
                      "valid": false,
                      "visited": false,
                    }
                  }
                  type="radio"
                >
                  <FinalFormComponent
                    clearable={false}
                    componentType="radio"
                    disabled={false}
                    id="selectOne2"
                    input={
                      Object {
                        "checked": false,
                        "name": "radioGroup",
                        "onBlur": [Function],
                        "onChange": [Function],
                        "onFocus": [Function],
                        "value": "Second radio",
                      }
                    }
                    inputColumnSize={8}
                    label="Radio button 2"
                    labelColumnSize={2}
                    labelKey="label"
                    meta={
                      Object {
                        "active": false,
                        "data": Object {},
                        "dirty": false,
                        "dirtySinceLastSubmit": false,
                        "error": "Please select one option",
                        "initial": undefined,
                        "invalid": true,
                        "pristine": true,
                        "submitError": undefined,
                        "submitFailed": false,
                        "submitSucceeded": false,
                        "submitting": false,
                        "touched": false,
                        "valid": false,
                        "visited": false,
                      }
                    }
                    multi={false}
                    placeholder=""
                    searchable={false}
                    simpleValue={true}
                    type="radio"
                    validateOnMount={false}
                    valueKey="value"
                  >
                    <FormGroup
                      bsClass="form-group"
                      className="field-group"
                      validationState={null}
                    >
                      <div
                        className="field-group form-group"
                      >
                        <Col
                          bsClass="col"
                          componentClass="div"
                        >
                          <div
                            className=""
                          >
                            <Radio
                              bsClass="radio"
                              checked={false}
                              disabled={false}
                              id="selectOne2"
                              inline={false}
                              name="radioGroup"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              title=""
                              value="Second radio"
                            >
                              <div
                                className="radio"
                              >
                                <label
                                  title=""
                                >
                                  <input
                                    checked={false}
                                    disabled={false}
                                    id="selectOne2"
                                    name="radioGroup"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    type="radio"
                                    value="Second radio"
                                  />
                                  Radio button 2
                                </label>
                              </div>
                            </Radio>
                          </div>
                        </Col>
                      </div>
                    </FormGroup>
                  </FinalFormComponent>
                </FinalFormRadio>
              </Field>
            </div>
          </Col>
          <Col
            bsClass="col"
            className="has-error"
            componentClass="div"
            xs={10}
            xsOffset={2}
          >
            <div
              className="has-error col-xs-10 col-xs-offset-2"
            >
              <ErrorBlock
                name="some group"
                validateOnMount={false}
              >
                <Field
                  format={[Function]}
                  name="some group"
                  parse={[Function]}
                  render={[Function]}
                  subscription={
                    Object {
                      "error": true,
                      "touched": true,
                    }
                  }
                />
              </ErrorBlock>
            </div>
          </Col>
        </div>
      </Col>
    </FieldGroup>
  </ReactFinalForm>
</Group>
`;

exports[`Final form FieldGroup component Should render correctly with error state 1`] = `
<Group
  validateOnMount={true}
>
  <ReactFinalForm
    onSubmit={[Function]}
    render={[Function]}
  >
    <FieldGroup
      groupSize={8}
      label="Field group"
      labelSize={2}
      name="some group"
      validateOnMount={true}
    >
      <Col
        bsClass="col"
        className="field-group"
        componentClass="div"
        xs={12}
      >
        <div
          className="field-group col-xs-12"
        >
          <Col
            bsClass="col"
            className="control-label"
            componentClass="label"
            xs={2}
          >
            <label
              className="control-label col-xs-2"
            >
              Field group
            </label>
          </Col>
          <Col
            bsClass="col"
            componentClass="div"
            xs={8}
          >
            <div
              className="col-xs-8"
            >
              <Field
                format={[Function]}
                id="selectOne1"
                name="radioGroup"
                parse={[Function]}
                render={[Function]}
                type="radio"
                validate={[Function]}
                value="First radio"
              >
                <FinalFormRadio
                  id="selectOne1"
                  input={
                    Object {
                      "checked": false,
                      "name": "radioGroup",
                      "onBlur": [Function],
                      "onChange": [Function],
                      "onFocus": [Function],
                      "value": "First radio",
                    }
                  }
                  label="Radio button 1"
                  meta={
                    Object {
                      "active": false,
                      "data": Object {},
                      "dirty": false,
                      "dirtySinceLastSubmit": false,
                      "error": "Please select one option",
                      "initial": undefined,
                      "invalid": true,
                      "pristine": true,
                      "submitError": undefined,
                      "submitFailed": false,
                      "submitSucceeded": false,
                      "submitting": false,
                      "touched": false,
                      "valid": false,
                      "visited": false,
                    }
                  }
                  type="radio"
                >
                  <FinalFormComponent
                    clearable={false}
                    componentType="radio"
                    disabled={false}
                    id="selectOne1"
                    input={
                      Object {
                        "checked": false,
                        "name": "radioGroup",
                        "onBlur": [Function],
                        "onChange": [Function],
                        "onFocus": [Function],
                        "value": "First radio",
                      }
                    }
                    inputColumnSize={8}
                    label="Radio button 1"
                    labelColumnSize={2}
                    labelKey="label"
                    meta={
                      Object {
                        "active": false,
                        "data": Object {},
                        "dirty": false,
                        "dirtySinceLastSubmit": false,
                        "error": "Please select one option",
                        "initial": undefined,
                        "invalid": true,
                        "pristine": true,
                        "submitError": undefined,
                        "submitFailed": false,
                        "submitSucceeded": false,
                        "submitting": false,
                        "touched": false,
                        "valid": false,
                        "visited": false,
                      }
                    }
                    multi={false}
                    placeholder=""
                    searchable={false}
                    simpleValue={true}
                    type="radio"
                    validateOnMount={false}
                    valueKey="value"
                  >
                    <FormGroup
                      bsClass="form-group"
                      className="field-group"
                      validationState={null}
                    >
                      <div
                        className="field-group form-group"
                      >
                        <Col
                          bsClass="col"
                          componentClass="div"
                        >
                          <div
                            className=""
                          >
                            <Radio
                              bsClass="radio"
                              checked={false}
                              disabled={false}
                              id="selectOne1"
                              inline={false}
                              name="radioGroup"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              title=""
                              value="First radio"
                            >
                              <div
                                className="radio"
                              >
                                <label
                                  title=""
                                >
                                  <input
                                    checked={false}
                                    disabled={false}
                                    id="selectOne1"
                                    name="radioGroup"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    type="radio"
                                    value="First radio"
                                  />
                                  Radio button 1
                                </label>
                              </div>
                            </Radio>
                          </div>
                        </Col>
                      </div>
                    </FormGroup>
                  </FinalFormComponent>
                </FinalFormRadio>
              </Field>
              <Field
                format={[Function]}
                id="selectOne2"
                name="radioGroup"
                parse={[Function]}
                render={[Function]}
                type="radio"
                validate={[Function]}
                value="Second radio"
              >
                <FinalFormRadio
                  id="selectOne2"
                  input={
                    Object {
                      "checked": false,
                      "name": "radioGroup",
                      "onBlur": [Function],
                      "onChange": [Function],
                      "onFocus": [Function],
                      "value": "Second radio",
                    }
                  }
                  label="Radio button 2"
                  meta={
                    Object {
                      "active": false,
                      "data": Object {},
                      "dirty": false,
                      "dirtySinceLastSubmit": false,
                      "error": "Please select one option",
                      "initial": undefined,
                      "invalid": true,
                      "pristine": true,
                      "submitError": undefined,
                      "submitFailed": false,
                      "submitSucceeded": false,
                      "submitting": false,
                      "touched": false,
                      "valid": false,
                      "visited": false,
                    }
                  }
                  type="radio"
                >
                  <FinalFormComponent
                    clearable={false}
                    componentType="radio"
                    disabled={false}
                    id="selectOne2"
                    input={
                      Object {
                        "checked": false,
                        "name": "radioGroup",
                        "onBlur": [Function],
                        "onChange": [Function],
                        "onFocus": [Function],
                        "value": "Second radio",
                      }
                    }
                    inputColumnSize={8}
                    label="Radio button 2"
                    labelColumnSize={2}
                    labelKey="label"
                    meta={
                      Object {
                        "active": false,
                        "data": Object {},
                        "dirty": false,
                        "dirtySinceLastSubmit": false,
                        "error": "Please select one option",
                        "initial": undefined,
                        "invalid": true,
                        "pristine": true,
                        "submitError": undefined,
                        "submitFailed": false,
                        "submitSucceeded": false,
                        "submitting": false,
                        "touched": false,
                        "valid": false,
                        "visited": false,
                      }
                    }
                    multi={false}
                    placeholder=""
                    searchable={false}
                    simpleValue={true}
                    type="radio"
                    validateOnMount={false}
                    valueKey="value"
                  >
                    <FormGroup
                      bsClass="form-group"
                      className="field-group"
                      validationState={null}
                    >
                      <div
                        className="field-group form-group"
                      >
                        <Col
                          bsClass="col"
                          componentClass="div"
                        >
                          <div
                            className=""
                          >
                            <Radio
                              bsClass="radio"
                              checked={false}
                              disabled={false}
                              id="selectOne2"
                              inline={false}
                              name="radioGroup"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              title=""
                              value="Second radio"
                            >
                              <div
                                className="radio"
                              >
                                <label
                                  title=""
                                >
                                  <input
                                    checked={false}
                                    disabled={false}
                                    id="selectOne2"
                                    name="radioGroup"
                                    onBlur={[Function]}
                                    onChange={[Function]}
                                    onFocus={[Function]}
                                    type="radio"
                                    value="Second radio"
                                  />
                                  Radio button 2
                                </label>
                              </div>
                            </Radio>
                          </div>
                        </Col>
                      </div>
                    </FormGroup>
                  </FinalFormComponent>
                </FinalFormRadio>
              </Field>
            </div>
          </Col>
          <Col
            bsClass="col"
            className="has-error"
            componentClass="div"
            xs={10}
            xsOffset={2}
          >
            <div
              className="has-error col-xs-10 col-xs-offset-2"
            >
              <ErrorBlock
                name="some group"
                validateOnMount={true}
              >
                <Field
                  format={[Function]}
                  name="some group"
                  parse={[Function]}
                  render={[Function]}
                  subscription={
                    Object {
                      "error": true,
                      "touched": true,
                    }
                  }
                />
              </ErrorBlock>
            </div>
          </Col>
        </div>
      </Col>
    </FieldGroup>
  </ReactFinalForm>
</Group>
`;
